--- a/vignettes/dirftR.Rmd
+++ b/vignettes/dirftR.Rmd
@@ -1,17 +1,19 @@
 ---
 title: "driftR"
 author: "Andrew Shaughnessy, Christopher Prener, Elizabeth Hasenmueller"
-date: "`r Sys.Date(September 26, 2017)`"
+date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{driftR}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
-```{r}
-# setup
+
+```{r, include = FALSE}
 library(readr)
 library(dplyr)
+library(ggplot2)
+library(driftR)
 ```
 
 ## Overview
@@ -19,12 +21,16 @@ library(dplyr)
 In-situ water-quality monitoring intruments take a continuous measurements of a various chemical and physical parameters. The longer these intruments are allowed to stay in the field, the further the readings of the various sensors drift from the true value of the parameter. The purpose of this package is to correct water-quality monotoring datasets for instrumental drift in a reliable, reproducable method. 
 
 ## Using driftR
-There are five main functions in the `driftR` which each serve their own purpose in data cleaning process.
+There are five main functions in the `driftR` which each serve their own purpose in data cleaning process:
+
+1. `dr_readSonde()` - import data from the Sonde 
+2. `dr_correct()` - apply correction factors
+3. `dr_clean1() - one point calibration 
+4. `dr_clean2()` - two point claibration
+5. `dr_drop()` - drop observations to account for equilibration
 
 ### Importing data
 First, to import a dataset, the `dr_sondeClean(fileExtention, defineVar= FALSE)` function will be utilized. The aregument `fileExtention` tells the function where the data is located. The argument `defineVar` is a logical statement where if `FALSE`, the data will be imported raw with no modifications and if `TRUE`, the "units" abservation will be removed and the different variables will be defined as the correct data type (i.e. Date as a date variable, Time as a time variable, everything else as a numberic variable). Using `defineVar = TRUE` will format the date as Year-Month-Day.
-
-example:
 
 ```{r}
 df <- dr_readSonde("~/driftR/inst/extdata/rawData.csv", defineVar = TRUE)
@@ -32,8 +38,6 @@ df <- dr_readSonde("~/driftR/inst/extdata/rawData.csv", defineVar = TRUE)
 
 ### Creating correction factors
 The next step in the data cleaning process is creating correction factors using `dr_correct(dataFrame, dateVar, timeVar, format)`. The correction factors that are generated are used to determine how much of the total drift is experienced by each observation for the total dataset. The argument `dataFrame` is the working data frame for the correction. The argument `dateVar` is the date variable for the dataset and `timeVar` is the time variable. The argument `format` describes the way that the date data is stored in the data frame and can be either "YMD" or "DMY". If the `dr_readSonde()` function is used to import the data, then `format = "YMD"`
-
-example:
 
 ```{r}
 corrFactors <- dr_correct(df, Date, Time, format = "YMD")
@@ -46,27 +50,24 @@ If two standard measurements are taken, then the function `dr_clean2(dataFrame,v
 
 These functions correct the data based on the formulas in Hasenmueller and Chriss, YEAR & LINK.
 
-example:
-
 ```{r}
 df$SpCond_Corr <- dr_clean1(df, SpCond, 1.07, 1, corrFactors)
 df$pH_Corr <- dr_clean2(df, pH, 7.01, 7, 11.8, 10, corrFactors)
 ```
+
 ### Dropping Data
 After the data has been cleaned, some of the data will need to be dropped in order to account for equilibration of the sensors as well as time out of the water during calibration. It is important to do this step last because dropping data before using `dr_clean1()` or `dr_clean2()` will result in the corrections being non-consistant. To do this, the `dr_drop(dataFrame,head=NULL,tail=NULL)` function will be used. The argument `dataFrame` is the working data frame for the correction. The arguments `head` and `tail` are the number of observations to be dropped from the begining and the end of the dataset respectively. It is recommended that at least 30 minutes are dropped from both the begining and end of the dataset (i.e. if an observation is taken every 5 minutes, then `head = 6`and `tail = 6`).
-
-example:
 
 ```{r}
 df <- dr_drop(df, 6, 6)
 ```
 
 ## Installation
-Opening on R:
+Install from CRAN:
   1. `install.packages("driftR")`
   2. `library(driftR)`
 
-Opening with Github:
+Install development version from GitHub:
   1. `install.packages("devtools")`
   2. `devtools::install_github("shaughnessyar/driftR")`
 
