--- a/README.Rmd
+++ b/README.Rmd
@@ -15,6 +15,8 @@ knitr::opts_chunk$set(
 # driftR
 
 [![Travis-CI Build Status](https://travis-ci.org/shaughnessyar/driftR.svg?branch=master)](https://travis-ci.org/shaughnessyar/driftR)
+[![AppVeyor Build Status](https://ci.appveyor.com/api/projects/status/github/shaughnessyar/driftR?branch=master&svg=true)](https://ci.appveyor.com/project/shaughnessyar/driftR)
+[![CRAN_Status_Badge](http://www.r-pkg.org/badges/version/driftR)](https://cran.r-project.org/package=driftR)
 
 The goal of driftR is to correct continuous water-quality monitoring data for intramental drift.
 
