--- a/README.Rmd
+++ b/README.Rmd
@@ -19,11 +19,11 @@ knitr::opts_chunk$set(
 [![codecov](https://codecov.io/gh/shaughnessyar/driftR/branch/master/graph/badge.svg)](https://codecov.io/gh/shaughnessyar/driftR)
 [![CRAN_Status_Badge](http://www.r-pkg.org/badges/version/driftR)](https://cran.r-project.org/package=driftR)
 
-The goal of driftR is to correct continuous water-quality monitoring data for intramental drift.
+The goal of `driftR` is to correct continuous water-quality monitoring data for intramental drift.
 
 ## Installation
 
-You can install driftR from github with:
+You can install `driftR` from Github with:
 
 ```{r gh-installation, eval = FALSE}
 # install.packages("devtools")
@@ -32,7 +32,14 @@ devtools::install_github("shaughnessyar/driftR")
 
 ## Background
 
+The `driftR` package implements a series of equations used in [Dr. Elizabeth Hasenmueller's](https://hasenmuellerlab.weebly.com) hydrology and geochemistry research. These equations correct continuous water-quality monitoring data for incramental drift that occurs over time. There are two forms of corrections, a one-point callibration and a two-point callibration.
+
+### One-Point Callibration
+
 ![fig1](man/figures/onePointCorrection.png)
+
+### Two-Point Callibration
+
 ![fig2](man/figures/twoPointCorrection.png)
 
 ## Usage
