--- a/vignettes/driftR.Rmd
+++ b/vignettes/driftR.Rmd
@@ -9,7 +9,7 @@ vignette: >
   %\VignetteEncoding{UTF-8}
 ---
 
-```{r, include = FALSE}
+```{r, eval=FALSE}
 library(readr)
 library(dplyr)
 library(ggplot2)
@@ -18,7 +18,7 @@ library(driftR)
 
 ## Overview
 
-In-situ water-quality monitoring intruments take a continuous measurements of a various chemical and physical parameters. The longer these intruments are allowed to stay in the field, the further the readings of the various sensors drift from the true value of the parameter. The purpose of this package is to correct water-quality monotoring datasets for instrumental drift in a reliable, reproducable method. 
+In-situ water-quality monitoring intruments take a continuous measurements of a various chemical and physical parameters. The longer these intruments are allowed to stay in the field, the further the readings of the various sensors drift from the true value of the parameter. The purpose of this package is to correct water-quality monotoring datasets for instrumental drift in a reliable, reproducable method.
 
 ## Equations
 The equations that are implemented were originally published as part of [Dr. Elizabeth Hasenmueller's](https://hasenmuellerlab.weebly.com) [dissertation research](http://openscholarship.wustl.edu/cgi/viewcontent.cgi?article=1584&amp=&context=etd&amp=&sei-redir=1&referer=https%253A%252F%252Fscholar.google.com%252Fscholar%253Fhl%253Den%2526as_sdt%253D0%25252C26%2526q%253Dhasenmueller%252Bwash%252Bu%2526btnG%253D#search=%22hasenmueller%20wash%20u%22) (see page 32).
@@ -45,14 +45,14 @@ There are five main functions in the `driftR` which each serve their own purpose
 ### Importing data
 First, to import a dataset, the `dr_sondeClean(fileExtention, defineVar= FALSE)` function will be utilized. The aregument `fileExtention` tells the function where the data is located. The argument `defineVar` is a logical statement where if `FALSE`, the data will be imported raw with no modifications and if `TRUE`, the "units" abservation will be removed and the different variables will be defined as the correct data type (i.e. Date as a date variable, Time as a time variable, everything else as a numberic variable). Using `defineVar = TRUE` will format the date as Year-Month-Day.
 
-```{r}
+```{r, eval=FALSE}
 df <- dr_readSonde(system.file("extdata", "rawData.csv", package = "driftR"), defineVar = TRUE)
 ```
 
 ### Creating correction factors
 The next step in the data cleaning process is creating correction factors using `dr_correct(dataFrame, dateVar, timeVar, format)`. The correction factors that are generated are used to determine how much of the total drift is experienced by each observation for the total dataset. The argument `dataFrame` is the working data frame for the correction. The argument `dateVar` is the date variable for the dataset and `timeVar` is the time variable. The argument `format` describes the way that the date data is stored in the data frame and can be either "YMD" or "DMY". If the `dr_readSonde()` function is used to import the data, then `format = "MDY"`
 
-```{r}
+```{r, eval=FALSE}
 corrFactors <- dr_correct(df, Date, Time, format = "MDY")
 ```
 
@@ -61,7 +61,7 @@ After creating the correction factors, we can begin cleaning the data for drift.
 
 If two standard measurements are taken, then the function `dr_clean2(dataFrame,varName,calValLow,calStdLow,calValHigh,calStdHigh,correctVar)` is utilized. The `calValLow` and `calValHigh` arguments are what the instrument was reading for the low and high concentration measurements respectively and the `calStdLow` and `calStdHigh` areguments are what the instrument should have been reading for the low and high concentration measurements respectively. 
 
-```{r}
+```{r, eval=FALSE}
 df$SpCond_Corr <- dr_clean1(df, SpCond, 1.07, 1, corrFactors)
 df$pH_Corr <- dr_clean2(df, pH, 7.01, 7, 11.8, 10, corrFactors)
 ```
@@ -69,7 +69,7 @@ df$pH_Corr <- dr_clean2(df, pH, 7.01, 7, 11.8, 10, corrFactors)
 ### Dropping Data
 After the data has been cleaned, some of the data will need to be dropped in order to account for equilibration of the sensors as well as time out of the water during calibration. It is important to do this step last because dropping data before using `dr_clean1()` or `dr_clean2()` will result in the corrections being non-consistant. To do this, the `dr_drop(dataFrame,head=NULL,tail=NULL)` function will be used. The argument `dataFrame` is the working data frame for the correction. The arguments `head` and `tail` are the number of observations to be dropped from the begining and the end of the dataset respectively. It is recommended that at least 30 minutes are dropped from both the begining and end of the dataset (i.e. if an observation is taken every 5 minutes, then `head = 6`and `tail = 6`).
 
-```{r}
+```{r, eval=FALSE}
 df <- dr_drop(df, 6, 6)
 ```
 
