--- a/vignettes/TidyEval.Rmd
+++ b/vignettes/TidyEval.Rmd
@@ -26,24 +26,82 @@ In order to implement this philosophical, verb-driven approach to data cleaning,
 
 Like the `tidyverse`, then, `driftR` is opinionated. The verbs that are used are implemented in specific ways meant to ensure that the data cleaning process for water-quality monitoring output is consistent and highly reproducibile. While `driftR` does enforce a specific workflow on users, the trade-off is the package's consistency and speed (relative to other, non-reproducible methods like cleaning these data in a spreadsheet application!).
 
+## Some Sample Data
+The following examples use these data:
+
+```{r, eval=FALSE}
+driftData <- data.frame(
+  Date = c("9/18/2015", "9/18/2015", "9/18/2015", "9/18/2015", "9/18/2015", "9/18/2015"),
+  Time = c("12:10:49", "12:15:50", "12:20:51", "12:25:51", "12:30:51", "12:35:51"),
+  Temp = c(14.76, 14.64, 14.57, 14.51, 14.50, 14.63),
+  SpCond = c(0.754, 0.750, 0.750, 0.749, 0.749, 0.749),
+  stringsAsFactors = FALSE
+)
+```
+
 ## Quoting
 
-```{r, eval=FALSE}
-> mean(mtcars$mpg)
-[1] 20.09062
-```
+One advantage of using a tidy evaluation approach for packages is that it offers a more flexible way to accept inputs from end users.
+
+### A Quick Example
+
+Many of the base `R` functions use the `$` symbol to differentiate between data frames and variables within them. The `mean()` function from the `stats` package provides an example of this behavior:
 
 ```{r, eval=FALSE}
-> my_mean <- function(data, variable){
-+  mean(data[[variable]])
-+ }
+> mean(driftData$Temp)
+[1] 14.60167
 ```
 
+Packages that are built on top of `tidyverse` functions often separate the data frame parameter from the variable parameter in their structure. For instance, we could write a "wrapper" around the `mean()` function that accepts the data frame and variable parameters separately:
+
 ```{r, eval=FALSE}
-> my_mean(mtcars, mpg)
+tidyMean <- function(data, variable){
+  mean(data[[variable]])
+}
+```
+
+This has consequences for how users interact with the function, however. If users do not quote the variable parameter, they will receive an error that the an object with the name of the input variable cannot be found:
+
+```{r, eval=FALSE}
+> tidyMean(driftData, Temp)
   Error in (function(x, i, exact) if (is.matrix(i)) as.matrix(x)[[i]] else .subset2(x,  : 
-   object 'mpg' not found 
-  
-> my_mean(mtcars, "mpg")
-[1] 20.09062
+   object 'Temp' not found 
 ```
+
+If end users *do* quote the input parameter, the function will evaluate successfully:
+
+```{r, eval=FALSE}
+> tidyMean(driftData, "Temp")
+[1] 14.60167
+```
+
+This, of course, increases the cognitive burden on new users of `R` who are still learning how all of this works. There are other common examples of where this occurs in the `R` ecosystem. For example, the `install.packages()` function requires that package names be quoted while the `library()` function accepts either quoted *or* unquoted names.
+
+### Tidy Evaluation in `driftR`
+`driftR` makes use of tidy evaluation to work around this issue. All `driftR` functions will accept variable names as parameters that are either quoted *or* unquoted.
+
+```{r, eval=FALSE}
+library("driftR")
+
+> dr_factor(driftData, corrFactor = corrFac, 
+            dateVar = Date, timeVar = Time, format = "MDY")
+#        Date     Time  Temp SpCond   corrFac
+# 1 9/18/2015 12:10:49 14.76  0.754 0.0000000
+# 2 9/18/2015 12:15:50 14.64  0.750 0.2003995
+# 3 9/18/2015 12:20:51 14.57  0.750 0.4007989
+# 4 9/18/2015 12:25:51 14.51  0.749 0.6005326
+# 5 9/18/2015 12:30:51 14.50  0.749 0.8002663
+# 6 9/18/2015 12:35:51 14.63  0.749 1.0000000
+
+> dr_factor(driftData, corrFactor = "corrFac", 
+            dateVar = "Date", timeVar = "Time", format = "MDY")
+#        Date     Time  Temp SpCond   corrFac
+# 1 9/18/2015 12:10:49 14.76  0.754 0.0000000
+# 2 9/18/2015 12:15:50 14.64  0.750 0.2003995
+# 3 9/18/2015 12:20:51 14.57  0.750 0.4007989
+# 4 9/18/2015 12:25:51 14.51  0.749 0.6005326
+# 5 9/18/2015 12:30:51 14.50  0.749 0.8002663
+# 6 9/18/2015 12:35:51 14.63  0.749 1.0000000
+```
+
+This mirrors the behavior of [`tidyverse`] functions.
